--- a/index.html
+++ b/index.html
@@ -1,104 +1,89 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Smart Productivity Dashboard</title>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Welcome to Firebase Hosting</title>
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="style.css" />
+    <!-- update the version number as needed -->
+    <script defer src="/__/firebase/11.6.0/firebase-app-compat.js"></script>
+    <!-- include only the Firebase features as you need -->
+    <script defer src="/__/firebase/11.6.0/firebase-auth-compat.js"></script>
+    <script defer src="/__/firebase/11.6.0/firebase-database-compat.js"></script>
+    <script defer src="/__/firebase/11.6.0/firebase-firestore-compat.js"></script>
+    <script defer src="/__/firebase/11.6.0/firebase-functions-compat.js"></script>
+    <script defer src="/__/firebase/11.6.0/firebase-messaging-compat.js"></script>
+    <script defer src="/__/firebase/11.6.0/firebase-storage-compat.js"></script>
+    <script defer src="/__/firebase/11.6.0/firebase-analytics-compat.js"></script>
+    <script defer src="/__/firebase/11.6.0/firebase-remote-config-compat.js"></script>
+    <script defer src="/__/firebase/11.6.0/firebase-performance-compat.js"></script>
+    <!-- 
+      initialize the SDK after all desired features are loaded, set useEmulator to false
+      to avoid connecting the SDK to running emulators.
+    -->
+    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 
-  <!-- Chart.js for visualization -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-  <!-- Firebase Config -->
-  <script type="module" src="firebase-config.js"></script>
-</head>
-<body>
-  <!-- Dark/Light Mode Toggle -->
-  <button class="toggle-btn" onclick="toggleTheme()">🌓 Theme</button>
-
-  <!-- Header -->
-  <header>🚀 Smart Productivity & Study Dashboard</header>
-
-  <!-- Main Grid Layout -->
-  <div id="main">
-
-    <!-- Clock -->
-    <div class="card">
-      <h2>⏰ Clock</h2>
-      <div id="clock" style="font-size:2rem;"></div>
+    <style media="screen">
+      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
+      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
+      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
+      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
+      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
+      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
+      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
+      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
+      @media (max-width: 600px) {
+        body, #message { margin-top: 0; background: white; box-shadow: none; }
+        body { border-top: 16px solid #ffa100; }
+      }
+    </style>
+  </head>
+  <body>
+    <div id="message">
+      <h2>Welcome</h2>
+      <h1>Firebase Hosting Setup Complete</h1>
+      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
+      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
     </div>
+    <p id="load">Firebase SDK Loading&hellip;</p>
 
-    <!-- Add Task -->
-    <div class="card">
-      <h2>📋 Add Task</h2>
-      <input id="taskInput" placeholder="Task" />
-      <select id="taskType">
-        <option>Personal</option><option>Professional</option><option>School</option>
-        <option>Financial</option><option>Work</option><option>Family</option>
-        <option>Health</option><option>Spiritual</option><option>Creative</option>
-      </select>
-      <select id="priority"><option>High</option><option>Mid</option><option>Low</option></select>
-      <input type="datetime-local" id="deadline" />
-      <textarea id="notes" placeholder="Optional notes..."></textarea>
-      <button onclick="addTask()">Add</button>
-    </div>
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        const loadEl = document.querySelector('#load');
+        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+        // // The Firebase SDK is initialized and available here!
+        //
+        // firebase.auth().onAuthStateChanged(user => { });
+        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
+        // firebase.firestore().doc('/foo/bar').get().then(() => { });
+        // firebase.functions().httpsCallable('yourFunction')().then(() => { });
+        // firebase.messaging().requestPermission().then(() => { });
+        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
+        // firebase.analytics(); // call to activate
+        // firebase.analytics().logEvent('tutorial_completed');
+        // firebase.performance(); // call to activate
+        //
+        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
 
-    <!-- Task List -->
-    <div class="card">
-      <h2>✅ Task List</h2>
-      <ul id="taskList"></ul>
-    </div>
-
-    <!-- Charts & Export -->
-    <div class="card">
-      <h2>📤 Export & Charts</h2>
-      <select id="exportRange">
-        <option value="today">Today</option>
-        <option value="week">This Week</option>
-        <option value="month">This Month</option>
-      </select>
-      <button onclick="exportCSV()">Export CSV</button>
-      <canvas id="taskChart"></canvas>
-      <canvas id="taskHeat"></canvas>
-    </div>
-
-    <!-- Topic of the Day -->
-    <div class="card">
-      <h2>🧠 Topic to Learn</h2>
-      <div id="studyTopic">Loading topic...</div>
-    </div>
-
-    <!-- Study Log -->
-    <div class="card">
-      <h2>📚 Study Log</h2>
-      <textarea id="studyLog" placeholder="What did you study today?"></textarea>
-    </div>
-
-    <!-- Ideas/Goals -->
-    <div class="card">
-      <h2>🌱 Later Goals & Ideas</h2>
-      <textarea id="ideas" placeholder="Type an idea or goal..."></textarea>
-      <button onclick="saveIdea()">Save</button>
-      <ul id="ideaList"></ul>
-    </div>
-
-    <!-- Daily Quiz -->
-    <div class="card">
-      <h2>🎯 Quiz</h2>
-      <div id="quizQ">What is Python used for?</div>
-      <ul id="quizOpts">
-        <li><button onclick="checkQuiz(0)">Web Design</button></li>
-        <li><button onclick="checkQuiz(1)">Data Analysis</button></li>
-        <li><button onclick="checkQuiz(2)">Image Editing</button></li>
-      </ul>
-      <div id="quizResult"></div>
-    </div>
-
-  </div>
-
-  <!-- Script Logic -->
-  <script src="script.js"></script>
-</body>
+        try {
+          let app = firebase.app();
+          let features = [
+            'auth', 
+            'database', 
+            'firestore',
+            'functions',
+            'messaging', 
+            'storage', 
+            'analytics', 
+            'remoteConfig',
+            'performance',
+          ].filter(feature => typeof app[feature] === 'function');
+          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
+        } catch (e) {
+          console.error(e);
+          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
+        }
+      });
+    </script>
+  </body>
 </html>
